# gitea-pika-installer-gtk4

./: Cargo.toml  Makefile  README.md  main.sh  makepot
.github/: github_pushback.sh
.github/workflows/: github-pushback.yml
data/: com.github.pikaos-linux.pikainstallergtk4.gschema.xml
data/scripts/: automatic-partition-install.sh  begin-install.sh  locale-name.py  manual-partition-install.sh  partition-utility.sh
debian/: changelog  control  postinst  rules
debian/extras/: pika-installer  pika-installer-autostart.desktop  pika-installer.desktop
locales/: ar_SA.json  bg_BG.json  cs_CZ.json  de_DE.json  en_US.json  fr_FR.json  it_IT.json  kab.json  nl_NL.json  sv_SE.json  tr_TR.json
po/: ar.po  bg.po  de.po  en_US.po  fr.po  it.po  sv.po
src/: automatic_paritioning.rs  build_ui.rs  config.rs  done_page.rs  eula_page.rs  install_page.rs  keyboard_page.rs  language_page.rs  main.rs  manual_partitioning.rs  partitioning_page.rs  save_window_size.rs  style.css  timezone_page.rs  welcome_page.rs
src/automatic_partitioning/: main.rs  mod.rs
src/automatic_partitioning_page/: mod.rs
src/custom_button/: imp.rs  mod.rs
src/done_page/: mod.rs
src/drive_mount_row/: imp.rs  mod.rs
src/efi_error_page/: main.rs  mod.rs
src/eula_page/: main.rs  mod.rs
src/install_page/: main.rs  mod.rs
src/installation_complete_page/: mod.rs
src/installation_progress_page/: auto_basic.rs  auto_btrfs.rs  auto_ext4.rs  auto_xfs.rs  manual_basic.rs  mod.rs
src/installation_summary_page/: mod.rs
src/installer_stack_page/: imp.rs  mod.rs
src/keyboard_page/: main.rs  mod.rs
src/language_page/: main.rs  mod.rs
src/manual_partitioning/: main.rs  mod.rs
src/manual_partitioning_page/: func.rs  mod.rs
src/partitioning_page/: main.rs  mod.rs
src/save_window_size/: main.rs  mod.rs
src/timezone_page/: mod.rs
src/unix_socket_tools/: mod.rs
src2/: main.rs
(+19 files in other folders)
