[package]
name = "pika-installer-gtk4"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
adw = { version = "0.5.3", package = "libadwaita", features = ["v1_4"] }
async-channel = "2.1.1"
duct = "0.13.7"
fragile = "2.0.0"
glib = "0.18.5"
gtk = { version = "0.7.3", package = "gtk4", features = ["v4_12"] }
pretty-bytes = "0.2.2"
time = "0.3.31"
vte = { version = "0.0.2", package = "zoha-vte4", features = ["v0_72"] }
glob = "0.3.1"
gettext-rs = { version = "0.7", features = ["gettext-system"] }
serde_json = "1.0.113"
serde = { version = "1.0", features = ["derive"] }
gnome-desktop = "0.4.2"
