[package]
name = "pika-installer-gtk4"
version = "1.0.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
adw = { version = "0.7.0", package = "libadwaita", features = ["v1_5"] }
async-channel = "2.3.1"
duct = "0.13.7"
gtk = { version = "0.9.0", package = "gtk4", features = ["v4_14"] }
pretty-bytes = "0.2.2"
time = "0.3.31"
vte = { version = "0.8.0", package = "vte4", features = ["v0_76"] }
glob = "0.3.1"
serde_json = "1.0.120"
serde = { version = "1.0", features = ["derive"] }
gnome-desktop = "0.4.2"
rust-i18n = "3.0.1"
sys-locale = "0.3.1"
